Adjusted reflective class instantiation to Java 11